k3d/postgres-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: taskflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      securityContext:
        fsGroup: 70
      containers:
        - name: postgres
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          args: ["-c", "max_parallel_maintenance_workers=4"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 70
            runAsGroup: 70
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            limits:
              cpu: "2000m"
              memory: 1024Mi
            requests:
              cpu: "500m"
              memory: 512Mi
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
          startupProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 2
            periodSeconds: 3
            failureThreshold: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            periodSeconds: 10
            failureThreshold: 2
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: taskflow
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-db
  type: ClusterIP
